--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,75 +4,164 @@
   border: 0;
   text-decoration: none;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  color: #24292f;
 }
 
-
 h1, h2, h3, h4 {
-  margin-top: 24px;
-  margin-bottom: 16px;
   font-weight: 600;
   line-height: 1.25;
   padding-bottom: 0.3em;
   border-bottom: 1px solid hsla(210,18%,87%,1);
 }
 
-.content > h1:first-child {
-  margin-top: 0px;
-}
-
 h1 {
+  margin: 24px 0px;
   font-size: 1.9em;
 }
 
 h2 {
-  margin: 50px 0px 20px 0px;
+  margin: 36px 0px 20px 0px;
 }
 
 h3 {
   margin: 30px 0px 10px 0px;
 }
 
+a {
+  color: #007be4;
+  font-weight: 600;
+  transition: color 0.250s ease;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 html, body {
-  min-height: 100%;
+  height: 100%;
 }
 
 .container {
   max-width: 1110px;
   margin: 0 auto;
-  display: flex;
 }
 
-.navbar {
-  flex-grow: 0;
+.header, .body, .footer {
+  display: flex;
+  justify-content: space-between;
+  gap: 18px;
+  align-items: stretch;
+}
+
+.header, .footer, .header a, .footer a {
+  color: white;
+}
+
+.body-content {
+  color: #24292f;
+}
+
+.header-navbar, .header-content, .body-navbar, .body-content, .footer-navbar, .footer-content { 
+  padding: 24px 36px;
+}
+
+.header-navbar, .header-content, .footer-navbar, .footer-content { 
+  border: 1px solid #24292f;
+  background-color: #24292f;
+}
+
+.header-navbar, .header-content {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.footer-navbar, .footer-content {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.header-navbar, .body-navbar, .footer-navbar {
+  flex: 0 0 auto;
+  width: 200px;
+}
+
+.header-content, .body-content, .footer-content {
+  flex: 1 1 auto;
+  min-width: 200px;
+}
+
+.body-content, .body-navbar {
+  border-left: 1px solid hsla(210,18%,87%,1);
+  border-right: 1px solid hsla(210,18%,87%,1);
+  min-height: 600px;
+}
+
+.header-content, .footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.body-navbar-inner {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 18px;
+}
+
+.navbar-module-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1px;
+}
+
+.module-link {
+  font-weight: 900;
+}
+
+.module-link, .section-link {
+  color: #24292f
+}
+
+.section-link {
+  font-weight: 500;
+  padding: 0.2em 0.4em;
+}
+
+.active-section-link {
+  /* color: #284c79;
+  text-decoration: underline; */
+  background-color: rgba(175,184,193,0.2);
+  border-radius: 6px;
+    /* font-size: 85%; */
+    /* margin: 0; */
+}
+
+/* .navbar {
+  flex-grow: 0;
+  display: flex;
+  flex-direction: column;
+  
   min-width: 200px;
   border: 1px solid hsla(210,18%,87%,1);
   border-radius: 6px;
   margin: 0px 12px 0px 0px;
+} */
+
+.body-content > h1:first-child {
+  margin-top: 0px;
 }
 
 .content-container {
   flex-grow: 1;
 } 
 
-.container .content {
+.container .body-content {
   padding: 24px 36px;
   /* box-sizing: border-box; */
-  border-left: 1px solid hsla(210,18%,87%,1);
-  border-right: 1px solid hsla(210,18%,87%,1);
+  
 }
 
-.header, .navbar-header, footer, .navbar-footer {
-  height: 20px;
-}
-
-.navbar-header {
-  border: 1px solid #24292f;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+/* .navbar-header {
   padding: 24px 36px;
   background-color: #24292f;
   color: white;
@@ -83,19 +172,9 @@ html, body {
 
 .navbar-footer {
   border: 1px solid #24292f;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
   padding: 24px 36px;
   background-color: #24292f;
-}
-
-.header, .footer { 
-  border: 1px solid #24292f;
-  display: flex;
-  justify-content: space-between;
-  padding: 24px 36px;
-  background-color: #24292f;
-}
+} */
 
 .subheader {
   padding: 24px 36px;
@@ -114,54 +193,34 @@ html, body {
   font-weight: 800;
 }
 
-.header a, .footer a{ 
-  color: white !important;
-}
-
-.header {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-}
-
-.footer {
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-.content p, .content ol, .content ul, .content li, .content blockquote, .content table {
+.body-content p, .body-content ol, .body-content ul, .body-content li, .body-content blockquote, .body-content table {
   font-weight: 400;
 }
 
-.content p, .content a, .content ol, .content ul, .content li, .content blockquote, .content table {
+.body-content p, .body-content a, .body-content ol, .body-content ul, .body-content li, .body-content blockquote, .body-content table {
   line-height: 1.5;
   font-size: 16px;
   margin-top: 0px;
   margin-bottom: 16px;
 }
 
-.content ol, ul {
+.body-content li ul {
+  margin: 0;
+}
+
+.body-content ol, ul {
   padding-left: 30px;
 }
 
-.content li {
+.body-content li {
   margin-bottom: 0px;
 }
 
-.content li+li {
+.body-content li+li {
   margin-top: 0.25em;
 }
 
-a {
-  color: #007be4;
-  font-weight: 600;
-  transition: color 0.250s ease;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.content code {
+.body-content code.language-text {
   font-family: Menlo, Monaco, "Courier New", Courier, monospace;
   background-color: rgba(175,184,193,0.2);
   border-radius: 6px;
@@ -170,18 +229,18 @@ a:hover {
   padding: 0.2em 0.4em;
 }
 
-.content blockquote {
+.body-content blockquote {
   font-style: italic;
   border-left: 0.4rem solid hsla(291, 0%, 18%,0.1);
   padding: 0.8rem 0.8rem 1px 0.8rem;
   background-color: #f6f8fa;
 }
 
-.content blockquote * {
+.body-content blockquote * {
   color: #57606a;
 }
 
-.content img {
+.body-content img {
   width: 100%;
   max-width: 600px;
 }
