--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -244,3 +244,12 @@ html, body {
   width: 100%;
   max-width: 600px;
 }
+
+table, th, td  {
+  border: 1px solid #d0d7de;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 6px 13px;
+}
