--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,6 @@ h1, h2, h3, h4 {
 }
 
 .page-banner-container {
-  /* border-bottom: 1px solid hsla(210,18%,87%,1); */
   padding-bottom: 33px;
   margin-bottom: 24px;
 }
@@ -47,7 +46,7 @@ html, body {
 }
 
 .container {
-  max-width: 1110px;
+  max-width: min(1400px, 90%);
   margin: 0 auto;
 }
 
